src/objects/Intended_Program_Term__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Term__c</fullName>
        <inlineHelpText>Academic Term that this record is associated with.</inlineHelpText>
        <label>Academic Term</label>
        <referenceTo>Academic_Term__c</referenceTo>
        <relationshipLabel>Intended Program Terms</relationshipLabel>
        <relationshipName>Academic_Terms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Activate_Application_Date__c</fullName>
        <inlineHelpText>Date that this record causes the application to open</inlineHelpText>
        <label>Activate Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <inlineHelpText>Applicant type(s) this record applies to (applies to all if blank)</inlineHelpText>
        <label>Applicant Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <formula>IF(OR(ISBLANK(Activate_Application_Date__c), ISBLANK(End_Application_Date__c)),
&quot;Inactive&quot;,
IF(
Activate_Application_Date__c  &lt;=  TODAY() &amp;&amp; End_Application_Date__c  &gt;=  TODAY(), &quot;Active&quot;, &quot;Inactive&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Active&quot; if this record is currently causing the application to be open. &quot;Inactive&quot; otherwise.</inlineHelpText>
        <label>Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <inlineHelpText>Citizenship type(s) this record applies to (applies to all if blank)</inlineHelpText>
        <label>Citizenship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Citizenship_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <inlineHelpText>Degree type(s) this record applies to (applies to all if blank)</inlineHelpText>
        <label>Degree Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <inlineHelpText>Delivery type(s) this record applies to (applies to all if blank)</inlineHelpText>
        <label>Delivery Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Application_Date__c</fullName>
        <inlineHelpText>Date that this record causes the application to close</inlineHelpText>
        <label>End Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Intended_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Program that this record applies to</inlineHelpText>
        <label>Intended Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Intended Program Terms</relationshipLabel>
        <relationshipName>Intended_Program_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID of the term that this record is associated with (used for integration with external systems)</inlineHelpText>
        <label>Period Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <inlineHelpText>Residency type this record applies to (applies to all if blank)</inlineHelpText>
        <label>Residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Residency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <inlineHelpText>School/college this record applies to (applies to all if blank)</inlineHelpText>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <inlineHelpText>Student type(s) this record applies to (applies to all if blank)</inlineHelpText>
        <label>Student Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <label>Intended Program Term</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Academic_Term__c</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activate_Application_Date__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CAPS_GS</fullName>
        <columns>NAME</columns>
        <columns>Academic_Term__c</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Academic_Term__c</field>
            <operation>contains</operation>
            <value>caps</value>
        </filters>
        <label>CAPS/GS</label>
    </listViews>
    <listViews>
        <fullName>CAPS_GS_Summer</fullName>
        <columns>NAME</columns>
        <columns>Academic_Term__c</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Academic_Term__c</field>
            <operation>contains</operation>
            <value>caps</value>
        </filters>
        <filters>
            <field>Academic_Term__c</field>
            <operation>contains</operation>
            <value>summer</value>
        </filters>
        <label>CAPS/GS - Summer</label>
    </listViews>
    <listViews>
        <fullName>CAS</fullName>
        <columns>NAME</columns>
        <columns>Academic_Term__c</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Academic_Term__c</field>
            <operation>contains</operation>
            <value>cas</value>
        </filters>
        <label>CAS</label>
    </listViews>
    <listViews>
        <fullName>SEM</fullName>
        <columns>NAME</columns>
        <columns>Academic_Term__c</columns>
        <columns>Activate_Application_Date__c</columns>
        <columns>End_Application_Date__c</columns>
        <columns>Application_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Academic_Term__c</field>
            <operation>contains</operation>
            <value>sem</value>
        </filters>
        <label>SEM</label>
    </listViews>
    <nameField>
        <label>Intended Program Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intended Program Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>